# Web-hooks

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  prometheus.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_tenancy_ingestion.py  0002_delivery_attempts.py  0003_tenant_limits.py  0004_diagnoses.py
dashboards/: relay.json
dashboards/provisioning/dashboards/: relay.yml
flaky_endpoint/: main.py
relay/: config.py  metrics.py  observability.py  signing.py
relay/agent/: graph.py  llm.py  prompts.py  tools.py  trigger.py
relay/api/: auth.py  errors.py  main.py  schemas.py
relay/api/routes/: deliveries.py  diagnoses.py  dlq.py  endpoints.py  events.py  tenants.py
relay/api/static/: index.html
relay/db/: engine.py  models.py
relay/delivery/: circuit_breaker.py  enqueue.py  ordering.py  rate_limit.py  retry.py  retry_queue.py  retry_scheduler.py  sender.py  worker.py
scripts/: ci.sh  demo.py  deploy-oracle.sh  seed.py
scripts/loadtest/: locustfile.py
tests/: conftest.py  test_agent_golden.py  test_agent_llm.py  test_config.py  test_diagnoses_api.py  test_healthz.py  test_isolation.py  test_metrics.py  test_phase1_ingestion.py  test_phase2_delivery.py  test_phase3_retries_dlq.py  test_phase4_ordering_fairness.py  test_retry_policy.py  test_retry_queue.py  test_sender.py  test_signing.py  test_worker_resilience.py
